# job-scraper

./: JobScraper.drawio  README.md  Untitled Diagram.drawio  buildspec-build.yml  buildspec-deploy.yml  buildspec.yml  package-lock.json  pyproject.toml  requirement.txt  requirements.txt  serverless.yml
job_scraper/: __main__.py  date_filter.py  dynamo_helper.py  job_filter.json  job_scraper.py  main.py  scraping.py  secret_manager.py  slack_helper.py  test.py
