[tool.poetry]
name = 'job_scraper_app'
version = "0.1.0"
description = "web scraping for Seek job"
authors = ["Penny"]

[tool.poetry.dependencies]
python = ">=3.9.0"
requests = "^2.31.0"
boto3 = "^1.33.6"
pandas = "^2.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"