[tool.poetry]
name = 'job_scraper_app'
version = "0.1.0"
description = "web scraping for Seek job"
authors = ["Penny"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.10"
requests = "^2.31.0"
boto3 = "^1.28.62"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"